# novaposhta-python-client

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  modules.rst  novaposhta.models.rst  novaposhta.rst
novaposhta/: __init__.py  chains.py  client.py  models.py  types.py
novaposhta/api/: __init__.py  exceptions.py
novaposhta/models/: additional_service.py  address.py  base.py  common.py  contact_person.py  counterparty.py  internet_document.py  scan_sheet.py  tracking_document.py
tests/: helpers.py  test_additional_service.py  test_adress.py  test_chains.py  test_client.py  test_common.py  test_contact_person.py  test_counterparty.py  test_internet_document.py  test_scan_sheet.py  test_tracking_document.py
