[tool.poetry]
name = "novaposhta-python-client"
packages = [
    { include = "novaposhta"}
]
version = "0.1.8"
description = "Python client for Nova Poshta API"
authors = ["Oleksii <semolex@live.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/semolex/novaposhta-python-client"
repository = "https://github.com/semolex/novaposhta-python-client"
keywords = [ "api", "nova-poshta", "novaposhta", "nova-poshta-api", "novaposhta-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.24.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^24"
pytest = "^7.4.2"
pytest-httpx = "^0.26.0"
coverage = "^7.3.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
